--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCde5Eu9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DvrPokOT.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BG8LCpYw.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Csk1kId8.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DDrSOO7q.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Z3HBHnd.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DdcVOh6y.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSoRV8Ey.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BtkMXSYx.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?d2bc541a-197f-4165-8349-d904d96af602">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/o75FLpOM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CNyG3DOW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DrR_QNBe.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZzyHvRL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DxegQiak.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DNcTjqiN.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BrpCunNk.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DScOpq70.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjbpMsBO.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BCde5Eu9.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736088358122]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"8427affa-bd4b-4671-9d01-6c3e1f52f1fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/o75FLpOM.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?d2bc541a-197f-4165-8349-d904d96af602">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736088566121]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"d2bc541a-197f-4165-8349-d904d96af602",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
