--- a/works/fontain/index.html
+++ b/works/fontain/index.html
@@ -6,23 +6,21 @@
 <style>.loader-cont{align-items:center;background-color:#bc71ff;display:flex;height:100vh;justify-content:center;position:fixed;width:100vw;z-index:1000000}.loader{align-items:flex-start;aspect-ratio:1;display:flex;width:60px}.loader:after,.loader:before{aspect-ratio:1;content:"";flex:1;--g:conic-gradient(from -90deg at 10px 10px,#fff 90deg,#0000 0);animation:l20 1s infinite;background:var(--g),var(--g),var(--g);filter:drop-shadow(30px 30px 0 #fff)}.loader:after{transform:scaleX(-1)}@keyframes l20{0%{background-position:0 0,10px 10px,20px 20px}33%{background-position:10px 10px}66%{background-position:0 20px,10px 10px,20px 0}to{background-position:0 0,10px 10px,20px 20px}}.loader_bg{align-items:center;animation:noiseAnimation 3s ease-in-out infinite;background:radial-gradient(circle at 10% 20%,hsla(0,100%,70%,.8),transparent 50%),radial-gradient(circle at 80% 30%,rgba(102,102,255,.8),transparent 50%),radial-gradient(circle at 50% 80%,rgba(102,255,102,.8),transparent 50%);background-size:200% 200%;display:flex;height:100%;justify-content:center;opacity:.5;width:100%}@keyframes noiseAnimation{0%{background-position:0 0}50%{background-position:100% 100%}to{background-position:0 0}}</style>
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
-<link rel="stylesheet" href="/_nuxt/Gallery.4g4am-Jz.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/fontain/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BCde5Eu9.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D-_QI2gS.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/_Z3HBHnd.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Csk1kId8.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BG8LCpYw.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/fontain/_payload.json?d2bc541a-197f-4165-8349-d904d96af602">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/o75FLpOM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Dg9tEN8V.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DNcTjqiN.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZzyHvRL.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DrR_QNBe.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/D0-qYiVH.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CjY6CoLd.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DdcVOh6y.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSoRV8Ey.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BtkMXSYx.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/2vQINEWI.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BrpCunNk.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DScOpq70.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjbpMsBO.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/BCde5Eu9.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/fontain/_payload.json?8427affa-bd4b-4671-9d01-6c3e1f52f1fe">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/fontain",1736088358126]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"8427affa-bd4b-4671-9d01-6c3e1f52f1fe",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/o75FLpOM.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/fontain/_payload.json?d2bc541a-197f-4165-8349-d904d96af602">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/fontain",1736088566125]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"d2bc541a-197f-4165-8349-d904d96af602",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
