--- a/works/moth/index.html
+++ b/works/moth/index.html
@@ -7,23 +7,23 @@
 <link rel="stylesheet" href="/_nuxt/Topbar.CkE6sM6w.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Contact.CQKS7Qcw.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?d2bc541a-197f-4165-8349-d904d96af602">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/o75FLpOM.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CzfBHC7J.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DrR_QNBe.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/works/moth/_payload.json?08c04ba6-a9b3-4729-938b-479f57ac2ef7">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_KHMaV6.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BO1yokt-.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/bvTnX-k7.js">
 <link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cdr9tgl2.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/2vQINEWI.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZzyHvRL.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BWqzUACP.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/uRcY8kLh.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DBduMmT5.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BrpCunNk.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DScOpq70.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DjbpMsBO.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DpliaYju.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/TAgKzilH.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cve3CJfl.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CxbK3Io_.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/WHyuefBC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DOGZBDtM.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bpi9OKci.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BE5QFlIn.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/o75FLpOM.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?d2bc541a-197f-4165-8349-d904d96af602">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736088566174]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"d2bc541a-197f-4165-8349-d904d96af602",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/B_KHMaV6.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><div class="loader-cont" id="loader-cont"><div class="loader_bg"><div class="loader"></div></div></div><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/works/moth/_payload.json?08c04ba6-a9b3-4729-938b-479f57ac2ef7">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/works/moth",1736132461579]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"08c04ba6-a9b3-4729-938b-479f57ac2ef7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
