--- a/ru/contact/index.html
+++ b/ru/contact/index.html
@@ -7,20 +7,20 @@
 <link rel="stylesheet" href="/_nuxt/contact.DCP6bPYJ.css">
 <link rel="stylesheet" href="/_nuxt/interval.D2cs51dV.css">
 <link rel="stylesheet" href="/_nuxt/Topbar_ru.IWjWQhaI.css">
-<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?08c04ba6-a9b3-4729-938b-479f57ac2ef7">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B_KHMaV6.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/woLThFHj.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/bvTnX-k7.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/TAgKzilH.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cv-xjnfo.js">
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DIdZBfM3.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DOGZBDtM.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bpi9OKci.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BE5QFlIn.js">
+<link rel="preload" as="fetch" crossorigin="anonymous" href="/ru/contact/_payload.json?b134aa6d-6e95-4a6e-8cef-62072305ebb8">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DLAX38Nm.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/N33LBpYM.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/q58rgZWk.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B9vPt6wT.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/B-5n-21M.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CFAa8Uzg.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CiB3DNVr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D2vNuijP.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DSM3gs8R.js">
 <link rel="icon" type="image/x-icon" href="favicon.ico">
-<script type="module" src="/_nuxt/B_KHMaV6.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?08c04ba6-a9b3-4729-938b-479f57ac2ef7">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736132461519]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"08c04ba6-a9b3-4729-938b-479f57ac2ef7",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
+<script type="module" src="/_nuxt/DLAX38Nm.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"moono labs"}</script></head><body  class="light"><div id="__nuxt"><!--[--><main><span></span></main><!--]--></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="true" id="__NUXT_DATA__" data-src="/ru/contact/_payload.json?b134aa6d-6e95-4a6e-8cef-62072305ebb8">[{"state":1,"once":3,"_errors":4,"serverRendered":6,"path":7,"prerenderedAt":8},["Reactive",2],{},["Set"],["ShallowReactive",5],{},true,"/ru/contact",1736132876657]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/",buildId:"b134aa6d-6e95-4a6e-8cef-62072305ebb8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script>
 <script src="https://player.vimeo.com/api/player.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/4.1.4/imagesloaded.pkgd.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script></body></html>
